[[whats-new]]
== What's New

=== Changes in 2.4 Since 2.3

This section describes the changes between version 2.4 and version 2.4.
See <<change-history>> for changes in previous versions.

==== `@RabbitListener` Changes

`MessageProperties` is now available for argument matching.
See <<async-annotation-driven-enable-signature>> for more information.

Async reply types now include `CompleteableFuture`
See <<async-returns>> for more information.

==== `RabbitAdmin` Changes

A new property `recoverManualDeclarations` allows recovery of manually declared queues/exchanges/bindings.
See <<declarable-recovery>> for more information.

==== Remoting Support

Support remoting using Spring Framework's RMI support is deprecated and will be removed in 3.0.
See <<remoting>> for more information.

==== Message Converter Changes

The `Jackson2JsonMessageConverter` can now determine the charset from the `contentEncoding` header.
See <<json-message-converter>> for more information.

==== AsyncRabbitTemplate

The `AsyncRabbitTemplate` is deprecated in favor of `AsyncRabbitTemplate2` which returns `CompletableFuture` s instead of `ListenableFuture` s.
See <<async-template>> for more information.