@@ -16,6 +16,8 @@
 
 package org.springframework.rabbit.stream.producer;
 
+import java.util.concurrent.CompletableFuture;
+
 import org.springframework.amqp.core.Message;
 import org.springframework.amqp.core.MessagePostProcessor;
 import org.springframework.amqp.support.converter.MessageConverter;
@@ -27,8 +29,6 @@ import org.springframework.rabbit.stream.support.StreamMessageProperties;
 import org.springframework.rabbit.stream.support.converter.DefaultStreamMessageConverter;
 import org.springframework.rabbit.stream.support.converter.StreamMessageConverter;
 import org.springframework.util.Assert;
-import org.springframework.util.concurrent.ListenableFuture;
-import org.springframework.util.concurrent.SettableListenableFuture;
 
 import com.rabbitmq.stream.ConfirmationHandler;
 import com.rabbitmq.stream.Constants;
@@ -41,11 +41,10 @@ import com.rabbitmq.stream.ProducerBuilder;
  * Default implementation of {@link RabbitStreamOperations}.
  *
  * @author Gary Russell
- * @since 2.4
- * @deprecated in favor of {@link RabbitStreamTemplate2}.
+ * @since 2.4.7
+ *
  */
-@Deprecated
-public class RabbitStreamTemplate implements RabbitStreamOperations, BeanNameAware {
+public class RabbitStreamTemplate2 implements RabbitStreamOperations2, BeanNameAware {
 
 	protected final LogAccessor logger = new LogAccessor(getClass()); // NOSONAR
 
@@ -70,7 +69,7 @@ public class RabbitStreamTemplate implements RabbitStreamOperations, BeanNameAwa
 	 * @param environment the environment.
 	 * @param streamName the stream name.
 	 */
-	public RabbitStreamTemplate(Environment environment, String streamName) {
+	public RabbitStreamTemplate2(Environment environment, String streamName) {
 		Assert.notNull(environment, "'environment' cannot be null");
 		Assert.notNull(streamName, "'streamName' cannot be null");
 		this.environment = environment;
@@ -139,27 +138,27 @@ public class RabbitStreamTemplate implements RabbitStreamOperations, BeanNameAwa
 
 
 	@Override
-	public ListenableFuture<Boolean> send(Message message) {
-		SettableListenableFuture<Boolean> future = new SettableListenableFuture<>();
+	public CompletableFuture<Boolean> send(Message message) {
+		CompletableFuture<Boolean> future = new CompletableFuture<>();
 		createOrGetProducer().send(this.streamConverter.fromMessage(message), handleConfirm(future));
 		return future;
 	}
 
 	@Override
-	public ListenableFuture<Boolean> convertAndSend(Object message) {
+	public CompletableFuture<Boolean> convertAndSend(Object message) {
 		return convertAndSend(message, null);
 	}
 
 	@Override
-	public ListenableFuture<Boolean> convertAndSend(Object message, @Nullable MessagePostProcessor mpp) {
+	public CompletableFuture<Boolean> convertAndSend(Object message, @Nullable MessagePostProcessor mpp) {
 		Message message2 = this.messageConverter.toMessage(message, new StreamMessageProperties());
 		Assert.notNull(message2, "The message converter returned null");
 		if (mpp != null) {
 			message2 = mpp.postProcessMessage(message2);
 			if (message2 == null) {
 				this.logger.debug("Message Post Processor returned null, message not sent");
-				SettableListenableFuture<Boolean> future = new SettableListenableFuture<>();
-				future.set(false);
+				CompletableFuture<Boolean> future = new CompletableFuture<>();
+				future.complete(false);
 				return future;
 			}
 		}
@@ -168,8 +167,8 @@ public class RabbitStreamTemplate implements RabbitStreamOperations, BeanNameAwa
 
 
 	@Override
-	public ListenableFuture<Boolean> send(com.rabbitmq.stream.Message message) {
-		SettableListenableFuture<Boolean> future = new SettableListenableFuture<>();
+	public CompletableFuture<Boolean> send(com.rabbitmq.stream.Message message) {
+		CompletableFuture<Boolean> future = new CompletableFuture<>();
 		createOrGetProducer().send(message, handleConfirm(future));
 		return future;
 	}
@@ -179,10 +178,10 @@ public class RabbitStreamTemplate implements RabbitStreamOperations, BeanNameAwa
 		return createOrGetProducer().messageBuilder();
 	}
 
-	private ConfirmationHandler handleConfirm(SettableListenableFuture<Boolean> future) {
+	private ConfirmationHandler handleConfirm(CompletableFuture<Boolean> future) {
 		return confStatus -> {
 			if (confStatus.isConfirmed()) {
-				future.set(true);
+				future.complete(true);
 			}
 			else {
 				int code = confStatus.getCode();
@@ -204,7 +203,7 @@ public class RabbitStreamTemplate implements RabbitStreamOperations, BeanNameAwa
 					errorMessage = "Unknown code: " + code;
 					break;
 				}
-				future.setException(new StreamSendException(errorMessage, code));
+				future.completeExceptionally(new StreamSendException(errorMessage, code));
 			}
 		};
 	}
